# 8_sem_programming

hw01_knn/: k_nearest_neighbor.py  test.py
hw02_laplace/: distribution.py
info_defence/: header_sync_class.py
parallel/balance/: CMakeLists.txt  schedule.cc
parallel/copyin/: CMakeLists.txt  copyin_ex.cc  copyprivate_ex.cc
parallel/fft/: Makefile  fft.cc
parallel/introductory/hello/: CMakeLists.txt  hello.cc
parallel/introductory/send/: CMakeLists.txt  send.cc
parallel/introductory/sum/: CMakeLists.txt  sum.cc
parallel/lab_1/: .ycm_extra_conf.py
parallel/lab_1/first/: 1_zh.cc  Makefile  eff_plot.py  matrix.hh  speed_plot.py
parallel/lab_1/second/: 2_zh.cc  Makefile  eff_plot.py  matrix.hh  speed_plot.py
parallel/lab_1/third/: 3_zh.cc  Makefile  eff_plot.py  speed_plot.py
parallel/matrices/: Makefile  matrix.cc  time_plot.py
parallel/matrices/include/: matrix.hh
parallel/nested/: CMakeLists.txt  nested.cc
parallel/open_cl/hello/: Makefile  hello.cc  info.cc
parallel/open_cl/matrices/: Makefile
parallel/open_cl/matrices/include/: matrix.hh  opencl_resources.hh
parallel/open_cl/matrices/kernels/: mult_with_local.cl  simple_mult.cl
parallel/open_cl/matrices/src/: main.cc  test.cc
parallel/open_cl/sort/: Makefile  bitonic.cl
parallel/open_cl/sort/include/: bitonic_sorter.hh
parallel/open_cl/sort/kernels/: kernel.cl
parallel/open_cl/sort/src/: main.cc
parallel/untied/: CMakeLists.txt  untied.cc
